Add route to request a one time ws auth ticket
